# udis86

./: .gitignore  CMakeLists.txt  udis86.h
libudis86/: CMakeLists.txt  udint.h  udis86.c
udcli/: CMakeLists.txt  udcli.c
